<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark"
    >

    <ImageView
        android:id="@+id/bannerMapscale"
        android:layout_width="wrap_content"
        android:layout_height="160sp"
        android:layout_marginBottom="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/banner" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/maps_scale_calculation"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannerMapscale"
        android:textColor="@color/white"
        />
    <androidx.cardview.widget.CardView
        android:id="@id/card_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:cardBackgroundColor="@color/background_card"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cm_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:padding="5sp"
                android:text="@string/map_distances"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/CmMapScale"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/input_maps_distance"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/cm"
                android:textColor="@color/white"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardScale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/card_distance"
        tools:layout_editor_absoluteX="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextMapscale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:padding="5sp"
                android:text="@string/map_scale"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/Scale1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:hint="0"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:padding="5sp"
                android:text=":"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/scale1" />

            <EditText
                android:id="@+id/Scale2"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:hint="@string/input_map_scale"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimaryDark"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/BtnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardScale"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="175sp"
        app:layout_constraintTop_toBottomOf="@id/BtnCalculate"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/result_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_text"
                android:textColor="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>